làm phần appointment

--- a/index.html
+++ b/index.html
@@ -389,9 +389,9 @@
     
                         <!-- News item 1 -->
                         <article class="news-item">
-                            <figure>
+                            <figure class="news-item__thumb">
                                 <a href="#!">
-                                    <img src="./assets/img/hero-01.jpg" alt="" class="news-item__thumb">
+                                    <img src="./assets/img/hero-01.jpg" alt="" class="news-item__img">
                                 </a>
                             </figure>
                             <section class="news-item__body">
@@ -405,9 +405,9 @@
     
                         <!-- News item 2 -->
                         <article class="news-item">
-                            <figure>
+                            <figure class="news-item__thumb">
                                 <a href="#!">
-                                    <img src="./assets/img/hero-01.jpg" alt="" class="news-item__thumb">
+                                    <img src="./assets/img/hero-01.jpg" alt="" class="news-item__img">
                                 </a>
                             </figure>
                             <section class="news-item__body">
@@ -422,6 +422,17 @@
                 </div>
             </div>
          </section>
+
+         <!-- Appointment -->
+          <section class="appointment">
+            <div class="container">
+                <div class="appointment__inner">
+                    <h2 class="appointment__heading section-heading">Always welcoming new patients</h2>
+                    <p class="appointment__desc section-desc">Take control of your dental health and get the personalized care you deserve. Call (541) 772-8846 to schedule</p>
+                    <a href="#!" class="btn">Appointment</a>
+                </div>
+            </div>
+          </section>
     </main>
 </body>
 </html>
